# Trading-sandbox

./: .gitignore  01_Results_analysis.ipynb  02_Predict_crypto_from BTC.ipynb  04_Twitter_processing.ipynb  05_Google_Trend_processing.ipynb  06_Fear_and_Greed_processing.ipynb  06_Subtimeframe_indicator.ipynb  06_backtesting_package_test.ipynb  07_Next_Trend_Indicators.ipynb  07_Previous_Trend_Indicators.ipynb  08_Order_book.ipynb  08_PyTorch_timeseries.ipynb  08_Strategie_forain.ipynb  08_Trend_decomposition_strategy.ipynb  09_VWAP_RSI_strategy.ipynb  10_Fourrier_Extrapolation.ipynb  11_Trix_strategy.ipynb  12_Candle_analysis.ipynb  13_f&g_GTrends.ipynb  14_Predict_next_days.ipynb  14_Trend_decomposition.ipynb  15_SuperTrend_future_strategy.ipynb  16_Autoencoder_Time_Series.ipynb  17_Analyse_Tradingviewindicator_ tweetindicator.ipynb  17_Big_will startegy.ipynb  18_Exponential_grid_trading.ipynb  18_Image_transformation.ipynb  19_Next_trend_prediction.ipynb  19_trend_prediction.ipynb  20_EMA_strategy.ipynb  21_EMA_crossover_strategy.ipynb  22_Future_trading.ipynb  23_Predictions_time_series.ipynb  23_Sniping_bot.ipynb  24_pyGAM.ipynb  25_Alpha_Vantage_API.ipynb  26_EMD.ipynb  27_MonteCarlo_simulation.ipynb  28_multi_step_lstm.ipynb  29_Markov_Regime.ipynb  (+15 more)
C_modules/: main.cpp
data/: process_forex_raw_file.py
depot/: cleaning.py  filldatabase.py  nlp.ipynb  time_series copy.ipynb  time_series_multi_step.ipynb  trade-sandbox.json  trade.py  utils.py
models/: BTC_conv_model.h5  BTC_conv_model_EMA20_150_30_40.h5  BTC_lstm_model.h5  conv_model_all_1h.h5  (+2 more)
(+45 files in other folders)
